--- a/NerfBot/App.config
+++ b/NerfBot/App.config
@@ -4,9 +4,10 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
   <appSettings>
-    <add key="host" value="yourhost.com"/>
+    <add key="host" value="irc.airnablocal.net"/>
     <add key="port" value="6667"/>
     <add key="nick" value="nerfbot"/>
-    <add key="channel" value="#yourchannel"/>
+    <add key="channel" value="#test"/>
+    <add key="master" value=":nick!~username@domain.local"/>
   </appSettings>
 </configuration>
